Made style.css file and designed themes

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!--- Tailwind CSS & Daisy UI CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@2.18.0/dist/full.css" rel="stylesheet" type="text/css" />
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2/dist/tailwind.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@2.18.0/dist/full.css" rel="stylesheet" type="text/css"/>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2/dist/tailwind.min.css" rel="stylesheet" type="text/css"/>
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 
     <!-- Images -->
@@ -26,8 +26,9 @@
         <!-- Error message -->
         <div class="alert-message"></div>
         <div class="input-section">
-            <input type="text" placeholder="Add a todo . . ." class="input input-bordered input-secondary w-full max-w-xs" />
-            <input type="date" class="input input-bordered input-secondary w-full max-w-xs schedule-date" />
+            <input type="text" placeholder="Add a todo . . ."
+                   class="input input-bordered input-secondary w-full max-w-xs"/>
+            <input type="date" class="input input-bordered input-secondary w-full max-w-xs schedule-date"/>
             <button class="btn btn-secondary add-task-button">
                 <i class="bx bx-plus bx-sm"></i>
             </button>
@@ -71,7 +72,6 @@
         </label>
         <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52">
             <li class="theme-item" theme="cupcake"><a>cupcake</a></li>
-            <li class="theme-item" theme="dark"><a>dark</a></li>
             <li class="theme-item" theme="light"><a>light</a></li>
             <li class="theme-item" theme="bumblebee"><a>bumblebee</a></li>
             <li class="theme-item" theme="synthwave"><a>synthwave</a></li>
